extends Control



func _on_play_levels_pressed():
	get_tree().change_scene_to_file("res://Scenes/black_screen.tscn")


func _on_play_multiplayer_pressed():
	get_tree().change_scene_to_file("res://Scenes/black_screen.tscn")


func _on_free_space_pressed():
	get_tree().change_scene_to_file("res://Scenes/black_screen.tscn")


func _on_learn_pressed():
	get_tree().change_scene_to_file("res://Scenes/black_screen.tscn")


func _on_shop_pressed():
	get_tree().change_scene_to_file("res://Scenes/black_screen.tscn")


func _on_settings_pressed():
	get_tree().change_scene_to_file("res://Scenes/black_screen.tscn")


func _on_login_signup_pressed():
	get_tree().change_scene_to_file("res://Scenes/black_screen.tscn")


func _on_temp_quit_pressed():
	get_tree().quit()
	
